k8s/data-lake/00-data-lake-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "data-lake"
  labels:
    name: "data-lake"
