k8s/data-lake/01-ms-elt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-elt
  namespace: data-lake
spec:
  selector:
    matchLabels:
      app: ms-elt
  replicas: 1 # To be updated
  template:
    metadata:
      labels:
        app: ms-elt
    spec:
      containers:
        - name: ms-elt
          image: udite/ms-elt:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
