k8s/data-lake/02-ms-elt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-elt
  namespace: data-lake
spec:
  selector:
    app: ms-elt
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
  type: LoadBalancer
