k8s/data-lake/03-spark-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark
  namespace: data-lake
spec:
  selector:
    app: spark
  type: ClusterIP
  ports:
    - name: spark-ui
      port: 4040
      targetPort: 4040
