k8s/data-lake/03-ms-elt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elt-ingress
  namespace: data-lake
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: elt.udite.com
      http:
        paths:
          - backend:
              service:
                name: ms-elt
                port:
                  number: 5002
            path: /
            pathType: Prefix
